--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,36 @@
-<div class="row">
-<div class="medium-12">
-<h1>Hello World</h1>
-<span class="label">Regular Label</span>
+<div class="jumbotron">
+  <div class="container">
+    <h1>Facebook on Rails</h1>
+    <p>Welcome to the app</p>
+    <div class="progress">
+        <div class="progress-bar" style="width: 35%"></div>
+        <div class="progress-bar progress-bar-warning" style="width: 10%"></div>
+        <div class="progress-bar progress-bar-danger" style="width: 10%"></div>
+        <div class="progress-bar progress-bar-success" style="width: 10%"></div>
+        <div class="progress-bar progress-bar-info" style="width: 35%"></div>
+    </div>
+  </div>
 </div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <h3>How it works?</h3>
+            <hr>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4">
+            <h2>Connect with Facebook</h2>
+            <p>Signup or login to this app with your facebook account</p>
+        </div>
+        <div class="col-md-4">
+            <h2>Create fun posts</h2>
+            <p>Start posting cool content. Max 160 characters twitter style</p>
+        </div>
+        <div class="col-md-4">
+            <h2>Share them</h2>
+            <p>Share with your friends on facebook</p>
+        </div>
+    </div>
 </div>
