--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,8 +8,11 @@
 
           <div class="form-group">
             <%= f.input :email, required: true, autofocus: true, input_html: {class: 'form-control'} %>
+
+            <% if f.object.password_required? %>
             <%= f.input :password, required: true, input_html: {class: 'form-control'}, hint: ("#{@minimum_password_length} characters minimum" if @validatable) %>
             <%= f.input :password_confirmation, required: true, input_html: {class: 'form-control'} %>
+            <% end %>
           </div>
           
           <%= f.button :submit, "Sign up",:class => 'btn btn-default' %>
